# lamtram

./: .gitignore  AUTHORS  COPYING  COPYING-2.1  Makefile.am  README.md  TODO  configure.ac
contrib/: meteor.py
docker/: Dockerfile.lamtram  Dockerfile.lamtram-deps  README.md  build  config  run
script/: convert-cond.pl  print-attention.pl  unk-rank.pl  unk-single.pl  unk-vocab.pl
src/: Makefile.am
src/cnpy/: .gitignore  Makefile.am  cnpy-utils.cpp  cnpy-utils.h
src/lamtram/: Makefile.am  builder-factory.cc  builder-factory.h  classifier.cc  classifier.h  config.h  counts.cc  counts.h  dict-utils.cc  dict-utils.h  dist-base.cc  dist-base.h  dist-factory.cc  dist-factory.h  dist-ngram.cc  dist-ngram.h  dist-one-hot.cc  dist-one-hot.h  dist-train-main.cc  dist-train.cc  dist-train.h  dist-uniform.cc  dist-uniform.h  dist-unk.cc  dist-unk.h  encoder-attentional.cc  encoder-attentional.h  encoder-classifier.cc  encoder-classifier.h  encoder-decoder.cc  encoder-decoder.h  ensemble-classifier.cc  ensemble-classifier.h  ensemble-decoder.cc  ensemble-decoder.h  eval-measure-bleu.cc  eval-measure-bleu.h  eval-measure-char.cc  eval-measure-char.h  eval-measure-charf.cc  (+68 more)
src/test/: Makefile.am  test-encoder-attentional.cc  test-encoder-decoder.cc  test-lamtram.cc  test-neural-lm.cc  test-vocabulary.cc
